Add Star Wars Text

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Rangers134 Collabarooni</h1>
     <p>We can dance if we want to, we can leave your friends behind</p>
 
-    
+    <div class="star-wars">
+        A long time ago in a galaxy far far away
+    </div>
 </body>
 </html>
