--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Rangers134 Collabarooni</h1>
     <p>We can dance if we want to, we can leave your friends behind</p>
 
+    <p class="blue">I'm doing a test. I'm doing a real test</p>
+
     
 </body>
 </html>
