--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h1>Rangers134 Collabarooni</h1>
     <p>We can dance if we want to, we can leave your friends behind</p>
 
+
+    <p class="red">Let's go hiking. tomorrow.</p>
+
     
 </body>
 </html>
