added lion quote

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h1>Rangers134 Collabarooni</h1>
     <p>We can dance if we want to, we can leave your friends behind</p>
 
-    
+ 
+    <p class="orange">I'm a lion. A real lion.</p>   
+
+
 </body>
 </html>
