--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
     <h1>Rangers134 Collabarooni</h1>
     <p>We can dance if we want to, we can leave your friends behind</p>
 
-    
+    <p class="red"> I'm a vampire. A real vampire.</p>
+
+
 </body>
+
 </html>
