--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Rangers134 Collabarooni</h1>
-    <p>We can dance if we want to, we can leave your friends behind</p>
+    <p>We can dance if we want to, we can leave your friends behind. As long as you dance in the purple rain!</p>
 
     
 </body>
