--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <p>We can dance if we want to, we can leave your friends behind</p>
 
     
+    <p>'Cause your friends don't dance
+        And if they don't dance
+        Well, they're no friends of mine.</p>
+
+    
 </body>
 </html>
