--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Rangers134 Collabarooni</h1>
-    <p>We can dance if we want to, we can leave your friends behind</p>
+    <p class="first"> can dance if we want to, we can leave your friends behind</p>
+
+    <p class="first"> Real Madrid is the best soccer team</p>
+    
 
     
 </body>
