--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>We can dance if we want to, we can leave your friends behind</p>
 
     
+<p class="red">I'm a vampire.</p>
+
 </body>
 </html>
