--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>We can dance if we want to, we can leave your friends behind</p>
 
     
+    <p class="dude">"Dude." "Sweet!"</p>
 </body>
 </html>
