--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+    
 </head>
 <body>
     <h1>Rangers134 Collabarooni</h1>
+    <img src="./office.jpg" alt="pictur of">
     <p>We can dance if we want to, we can leave your friends behind</p>
 
     
