--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <h1>Rangers134 Collabarooni</h1>
     <p>We can dance if we want to, we can leave your friends behind</p>
 
-    
+    <p>
+        Hiiiiiii
+    </p>
+
+
+
 </body>
 </html>
