--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>Rangers134 Collabarooni</h1>
+    <h1>Rangers134 Collabarooni eith our teretr ...</h1>
     <p>We can dance if we want to, we can leave your friends behind</p>
 
     
